{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 34,
  "lineage": "83ce7517-9b2a-b129-4bef-1bda09a067e3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_databricks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2442fd0e-2130-47ce-b4c4-087ed7e3c757",
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev",
            "location": "uksouth",
            "name": "vnet-databricks-dev",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-private-10.30.11.0_24",
                "name": "snet-databricks-private-10.30.11.0_24",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-private"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-public-10.30.12.0_24",
                "name": "snet-databricks-public-10.30.12.0_24",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-public"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-pep",
                "name": "snet-databricks-pep",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-databricks-dev",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-private",
            "location": "uksouth",
            "name": "nsg-databricks-private",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-databricks-private",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-public",
            "location": "uksouth",
            "name": "nsg-databricks-public",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-databricks-public",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "databricks_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-private-10.30.11.0_24",
            "name": "snet-databricks-private-10.30.11.0_24",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databricks-dev-uks-01",
            "virtual_network_name": "vnet-databricks-dev"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-databricks-private-10.30.11.0_24",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485",
            "virtual_network_name": "vnet-databricks-dev"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "databricks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-public-10.30.12.0_24",
            "name": "snet-databricks-public-10.30.12.0_24",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databricks-dev-uks-01",
            "virtual_network_name": "vnet-databricks-dev"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-databricks-public-10.30.12.0_24",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485",
            "virtual_network_name": "vnet-databricks-dev"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pep_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-pep",
            "name": "snet-databricks-pep",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databricks-dev-uks-01",
            "virtual_network_name": "vnet-databricks-dev"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-databricks-pep",
            "resource_group_name": "rg-databricks-dev-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485",
            "virtual_network_name": "vnet-databricks-dev"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-private-10.30.11.0_24",
            "network_security_group_id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-private",
            "subnet_id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-private-10.30.11.0_24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks",
            "module.network.azurerm_network_security_group.private_nsg",
            "module.network.azurerm_subnet.databricks_private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-public-10.30.12.0_24",
            "network_security_group_id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-public",
            "subnet_id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-dev-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-dev/subnets/snet-databricks-public-10.30.12.0_24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks",
            "module.network.azurerm_network_security_group.public_nsg",
            "module.network.azurerm_subnet.databricks_public"
          ]
        }
      ]
    }
  ]
}